--- a/styles/headers.module.scss
+++ b/styles/headers.module.scss
@@ -57,7 +57,7 @@
     text-align: center;
     align-items: center;
     .tootlTipText{
-      color: white;
+      color: #002848;
     }
     .links {
       text-transform: capitalize;
